--- a/build.gradle
+++ b/build.gradle
@@ -116,14 +116,26 @@ repositories {
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
-    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html#sub:flat_dir_resolver
-    // flatDir {
-    //     dir 'libs'
-    // }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
+    // ローカルの mod/jar を ForgeGradle の deobf で渡す (IDE と FG の両方で認識されやすくする)
+    compileOnly fg.deobf(files('libs/superbwarfare-1.20.1-0.8.8-final-6a6b54795.jar'))
+    runtimeOnly fg.deobf(files('libs/superbwarfare-1.20.1-0.8.8-final-6a6b54795.jar'))
+    // IDE が External Libraries に表示するための明示的な implementation 依存
+    implementation files('libs/superbwarfare-1.20.1-0.8.8-final-6a6b54795.jar')
+
+    compileOnly fg.deobf(files('libs/cc-tweaked-1.20.1-forge-1.116.2.jar'))
+    runtimeOnly fg.deobf(files('libs/cc-tweaked-1.20.1-forge-1.116.2.jar'))
+    // IDE 表示用
+    implementation files('libs/cc-tweaked-1.20.1-forge-1.116.2.jar')
+
+    // Minecraft/Forge 本体定義はそのまま
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
     // Specify the version of Minecraft to use.
     // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
     // The "userdev" classifier will be requested and setup by ForgeGradle.
